tests/fail/semantics/invalid_lifecycle_hook/main.kira
construct Widget {
    annotations {
        @State;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card() {
    content {
    }

    onDisappear() {
        return;
    }
}
